k8/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  namespace: rest-api
spec:
  selector:
    app: demo-app
  ports:
    - port: 8000
      targetPort: 8000
