k8/app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: demo-app
  namespace: rest-api
spec:
  to:
    kind: Service
    name: demo-app
  port:
    targetPort: 8000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
